[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Images/helmet.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/armor.png" type="Texture" id=2]
[ext_resource path="res://Scripts/InventoryUI.gd" type="Script" id=3]
[ext_resource path="res://Assets/Images/weapon.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/spell.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/profession.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/ability.png" type="Texture" id=7]
[ext_resource path="res://Assets/visitor32.tres" type="DynamicFont" id=8]
[ext_resource path="res://Scenes/SkillUI.tscn" type="PackedScene" id=9]

[node name="Inventory" type="Node2D"]
script = ExtResource( 3 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 56.0
margin_bottom = 36.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 6
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability" type="CenterContainer" parent="GridContainer"]
margin_right = 16.0
margin_bottom = 16.0
mouse_default_cursor_shape = 6

[node name="TextureRect" type="TextureRect" parent="GridContainer/Ability"]
margin_right = 16.0
margin_bottom = 16.0
mouse_default_cursor_shape = 6
texture = ExtResource( 7 )

[node name="Profession" type="CenterContainer" parent="GridContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
mouse_default_cursor_shape = 6

[node name="TextureRect" type="TextureRect" parent="GridContainer/Profession"]
margin_right = 16.0
margin_bottom = 16.0
mouse_default_cursor_shape = 6
texture = ExtResource( 6 )

[node name="Spell" type="CenterContainer" parent="GridContainer"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
mouse_default_cursor_shape = 6

[node name="TextureRect" type="TextureRect" parent="GridContainer/Spell"]
margin_right = 16.0
margin_bottom = 16.0
mouse_default_cursor_shape = 6
texture = ExtResource( 5 )

[node name="Helmet" type="CenterContainer" parent="GridContainer"]
margin_top = 20.0
margin_right = 16.0
margin_bottom = 36.0
mouse_default_cursor_shape = 6

[node name="TextureRect" type="TextureRect" parent="GridContainer/Helmet"]
margin_right = 16.0
margin_bottom = 16.0
mouse_default_cursor_shape = 6
texture = ExtResource( 1 )

[node name="Armor" type="CenterContainer" parent="GridContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 36.0
margin_bottom = 36.0
mouse_default_cursor_shape = 6

[node name="TextureRect2" type="TextureRect" parent="GridContainer/Armor"]
margin_right = 16.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 32, 32 )
mouse_default_cursor_shape = 6
texture = ExtResource( 2 )

[node name="Weapon" type="CenterContainer" parent="GridContainer"]
margin_left = 40.0
margin_top = 20.0
margin_right = 56.0
margin_bottom = 36.0
mouse_default_cursor_shape = 6

[node name="TextureRect2" type="TextureRect" parent="GridContainer/Weapon"]
margin_right = 16.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 32, 32 )
mouse_default_cursor_shape = 6
texture = ExtResource( 4 )

[node name="Popup" type="Control" parent="."]
margin_left = 64.0
margin_right = 104.0
margin_bottom = 40.0
rect_scale = Vector2( 0.25, 0.25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Popup"]
margin_right = 194.0
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 187.0
margin_bottom = 39.0

[node name="Name" type="Label" parent="Popup/PanelContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 32.0
rect_min_size = Vector2( 180, 32 )
custom_fonts/font = ExtResource( 8 )
text = "Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Control" parent="."]
margin_left = 240.0
margin_right = 280.0
margin_bottom = 40.0
rect_scale = Vector2( 0.25, 0.25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Stats"]
margin_right = 278.0
margin_bottom = 118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Stats/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 271.0
margin_bottom = 111.0

[node name="HP" parent="Stats/PanelContainer/VBoxContainer" instance=ExtResource( 9 )]
margin_top = 0.0
margin_bottom = 32.0

[node name="StatName" parent="Stats/PanelContainer/VBoxContainer/HP" index="0"]
text = "Max HP"

[node name="Attack" parent="Stats/PanelContainer/VBoxContainer" instance=ExtResource( 9 )]

[node name="StatName" parent="Stats/PanelContainer/VBoxContainer/Attack" index="0"]
text = "Attack"

[node name="Defence" parent="Stats/PanelContainer/VBoxContainer" instance=ExtResource( 9 )]
margin_top = 72.0
margin_bottom = 104.0

[node name="StatName" parent="Stats/PanelContainer/VBoxContainer/Defence" index="0"]
text = "Defence"
[connection signal="mouse_entered" from="GridContainer/Ability" to="." method="_on_Ability_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/Ability" to="." method="_on_Ability_mouse_exited"]
[connection signal="mouse_entered" from="GridContainer/Profession" to="." method="_on_Profession_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/Profession" to="." method="_on_Profession_mouse_exited"]
[connection signal="mouse_entered" from="GridContainer/Spell" to="." method="_on_Spell_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/Spell" to="." method="_on_Spell_mouse_exited"]
[connection signal="mouse_entered" from="GridContainer/Helmet" to="." method="_on_Helmet_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/Helmet" to="." method="_on_Helmet_mouse_exited"]
[connection signal="mouse_entered" from="GridContainer/Armor" to="." method="_on_Armor_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/Armor" to="." method="_on_Armor_mouse_exited"]
[connection signal="mouse_entered" from="GridContainer/Weapon" to="." method="_on_Weapon_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/Weapon" to="." method="_on_Weapon_mouse_exited"]

[editable path="Stats/PanelContainer/VBoxContainer/HP"]

[editable path="Stats/PanelContainer/VBoxContainer/Attack"]

[editable path="Stats/PanelContainer/VBoxContainer/Defence"]
